nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-gitops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-gitops
  template:
    metadata:
      labels:
        app: nginx-gitops
    spec:
      containers:
      - name: nginx
        image: adbonino/nginx-site:b2b4e7830b29466a39e25cc59dd0063ab117ef96
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /workdir
      volumes:
      - name: html-volume
        persistentVolumeClaim:
          claimName: nginx-html-pvc
