nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gitops
spec:
  selector:
    app: nginx-gitops
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
